# csvchk

./: Cargo.toml  LICENSE  README.md  mk-outs.sh
src/: main.rs
tests/: cli.rs
tests/expected/: blast.csv.columns.no-headers.out  books.tsv.columns.no-headers.out  books.tsv.out  books.tsv.stdin.out  dense.out  movies2.csv.grep.hooper.titlecase.out  movies2.csv.grep.regex.insensitive.limit.0.out  movies2.csv.limit.3.out  movies2.tsv.limit.3.out  multiple.out  nohdr.csv.columns.out  nohdr.csv.limit.2.out  nohdr.csv.no-headers.number.out  nohdr.csv.no-headers.out  nohdr.csv.number.out  nohdr.csv.out
tests/inputs/: blast.csv  books.txt  movies2.tsv  sparse.csv
