[package]
name = "csvchk"
version = "0.2.1"
edition = "2021"
readme = "README.md"
authors = ["Ken Youens-Clark <kyclark@gmail.com>"]
description = "Vertical view of delimited text records"
license-file = "LICENSE"
homepage = "https://github.com/kyclark/csvchk"
repository = "https://github.com/kyclark/csvchk"
categories = ["command-line-utilities", "csv", "delimited text"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
csv = "1.3"
tabular = "0.2"
cargo-release = "0.24.12"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"
