[package]
name = "csvchk"
version = "0.2.4"
edition = "2021"
readme = "README.md"
authors = ["Ken Youens-Clark <kyclark@gmail.com>"]
description = "Vertical view of delimited text records"
license-file = "LICENSE"
homepage = "https://github.com/kyclark/csvchk"
repository = "https://github.com/kyclark/csvchk"
categories = ["command-line-utilities", "csv", "delimited text"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1.0.79"
csv = "1.3.0"
tabular = "0.2.0"
cargo-release = "0.25.6"
regex = "1.10.3"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.0.4"
rand = "0.8.5"
pretty_assertions = "1.4.0"
